--- a/Configuration/NodeTypes.yaml
+++ b/Configuration/NodeTypes.yaml
@@ -25,7 +25,7 @@
       type: DateTime
       defaultValue: 'now'
       ui:
-        label: 'Creation date'
+        label: 'First published'
         inspector:
           group: 'general'
           position: 5
